--- a/comparisons/animation_losses/video_animation_losses.ipynb
+++ b/comparisons/animation_losses/video_animation_losses.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('/comparisons/comparison_w_pandas/YOLOv10b.csv')"
+    "data = pd.read_csv('/comparisons/comparison_w_pandas/E5 - YOLOv10b.csv')"
    ],
    "id": "d80f5bee7f9b2e61",
    "outputs": [],
